--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #0b0c0e;
 }
 
 .App-logo {
