--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -1,9 +1,36 @@
 .body{
-    background-color: white;
+   
     width: 80%;
     margin: 30px auto;
     
 }
+.body *{
+border-radius: 10px;
+}
 .longStory_1{
-    display: flex;
+    background-color: white;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 300px;
+    height: auto;
+    margin-bottom: 30px;
+   
+}
+
+.shortStory_1{
+    background-color: white;
+}
+@media screen and (max-width:1000px ) {
+    .longStory_1{
+        grid-template-rows: 250px 200px;
+        grid-template-columns:1fr ;
+
+    }
+}
+@media screen and (max-width:750px) {
+    .longStory_1{
+        grid-row-gap: 50px;
+    }
+    
 }
