authors profile added in the dom

--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -20,7 +20,9 @@ background-color: white;
     margin-bottom: 30px;
    
 }
-
+.authorsProfile{
+    background-color: black !important;
+}
 .shortStory_1{
     background-color: white;
     margin-bottom: 30px;
