--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -27,6 +27,9 @@ background-color: white;
     background-color: black !important;
     color: white;
 }
+.shortStory_withoutCover_2,.longStory_2{
+    margin-bottom: 30px;
+}
 .shortStory_1{
     background-color: white;
     margin-bottom: 30px;
