--- a/src/Components/AuthorProfile/AuhtorProfile.css
+++ b/src/Components/AuthorProfile/AuhtorProfile.css
@@ -2,6 +2,7 @@
    display: flex;
    margin-top: 20px;
     align-items: baseline;
+    
     color: white;
     padding: 0 10px;
     background-color: #343333 !important;
@@ -41,4 +42,9 @@
 .unfollow{
     color: gray !important
     ;
+}
+@media screen and (max-width:750px) {
+    .authorProfile{
+        flex-direction: column;
+    }
 }
